--- a/src/styles.css
+++ b/src/styles.css
@@ -259,6 +259,23 @@ h3 {
 
 @media screen and (max-width: 860px) {
 
+  header {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+
+  .title {
+    font-size: 210%;
+  }
+  
+  .welcome-msg {
+    font-size: 156%;
+    padding: 10px;
+    font-weight: 500;
+  }
+
   .user_info {
     padding: 15px;
     width: 96%;
@@ -460,6 +477,24 @@ h3 {
 
   .activity {
     margin-left: 30px;
+  }
+
+  .activity_comparison > h3,
+  .weekly_report > h3 {
+    font-size: 127%;
+  }
+
+  .activity_comparison > .inline-records,
+  .weekly_report > .inline-records {
+    font-size: 77%;
+  }
+
+  .activity_comparison {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
   }
 
 
