--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,19 @@
 * {
   box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
   margin: 0;
   padding: 0;
   transition: ease all .3s;
-  font-family: 'Quicksand', sans-serif;
 }
 
 header {
-  height: 125px;
+  align-items: center;
+  background-color: #FF3B3F;
+  color: #FFF;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 125px;
   justify-content: center;
-  background-color: #FF3B3F;
-  color: #FFF
 }
 
 .title{
@@ -46,19 +46,19 @@ h3 {
 }
 
 .daily_section {
+  background-color: #EFEFEF;
   display: flex;
   flex-direction: column;
   height: 100%;
-  background-color: #EFEFEF;
   padding: 40px;
 }
 
 .info_block {
   background-color: #CAEBF2;
+  border-radius: 3px;
   border: solid 2px #A9A9A9;
   margin: 10px;
   padding: 5px;
-  border-radius: 3px;
 }
 
 .user_info {
@@ -68,8 +68,8 @@ h3 {
 }
 
 .user_info_headings {
-  margin-top: 3px;
   font-size: 20px;
+  margin-top: 3px;
 }
 
 .user_info_text {
@@ -89,14 +89,14 @@ h3 {
 }
 
 .daily_water_intake > p {
+  color: #FF3B3F;
   font-size: 220%;
   font-weight: 600;
-  color: #FF3B3F;
 }
 
 .daily_water_intake {
-  text-align: center;
   align-self: center;
+  text-align: center;
 }
 
 .weekly_water_info > h3 {
@@ -108,17 +108,17 @@ h3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
-  padding: 15px;
   margin-right: -5px;
+  padding: 15px;
+  text-align: center;
 }
 
 .week_by_day {
+  align-items: center;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
   font-size: 115%;
-  align-items: center;
+  justify-content: space-evenly;
 }
 
 .second_half_week {
@@ -158,8 +158,8 @@ h3 {
 }
 
 .avg_sleep {
-  text-align: center;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .avg_sleep > h3 {
@@ -172,8 +172,8 @@ h3 {
 }
 
 .weekly_sleep_info {
-  display: flex;
   align-self: center;
+  display: flex;
   flex-direction: column;
   text-align: center;
 }
@@ -189,8 +189,8 @@ h3 {
 .all_sleep_days {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .single_day_sleep {
@@ -208,10 +208,10 @@ h3 {
 }
 
 .steps_activity_info {
+  align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
   margin-bottom: 80px;
 }
 
@@ -272,8 +272,8 @@ h3 {
   
   .welcome-msg {
     font-size: 156%;
-    padding: 10px;
     font-weight: 500;
+    padding: 10px;
   }
 
   .user_info {
@@ -347,8 +347,8 @@ h3 {
   .weekly_report,
   .activity_comparison {
     align-items: center;
-    display: flex;
     align-items: center;
+    display: flex;
     flex-direction: column;
     margin-bottom: 20px;
   }
@@ -378,11 +378,11 @@ h3 {
   .water_info,
   .sleep_info,
   .activity_block {
+    align-self: center;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     width: 125%;
-    align-self: center;
   }
 
   .daily_water_intake {
@@ -399,9 +399,9 @@ h3 {
   }
 
   .weekly_water_info {
-    flex-wrap: wrap;
-    flex-direction: column;
     align-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
   }
 
   .week_by_day {
@@ -456,8 +456,8 @@ h3 {
   .steps_activity_info {
     display: flex;
     justify-content: space-between;
-    padding: 0;
     margin-bottom: 20px;
+    padding: 0;
   }
 
   .activity > p,
@@ -496,6 +496,5 @@ h3 {
     justify-content: center;
     width: 100%;
   }
-
 
 }
